--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,3 @@
-sameProductError=You can not add product with same name
+sameProductError=There is already a product named {0}
+validation.notblank=This field can not be empty.
+validation.size=This field should be minimum {min} and maximum {max} characters long.
