--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -1,1 +1,3 @@
-sameProductError=Aynı isimde 2. bir ürün eklenemez.
+sameProductError={0} isimli bir ürün zaten var.
+validation.notblank=Bu alan boş bırakılamaz.
+validation.size=Bu alan en az {min} en çok {max} karakterli olmalıdır.
